--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -90,7 +90,7 @@
                             </select>
                         </div>
                         <div class="col-auto my-1">
-                            <button type="submit" class="btn btn-danger">Tìm kiếm </button>
+                            <button type="submit" class="btn btn-danger">Tìm kiếm</button>
                         </div>
                     </div>
                 </form>
@@ -133,19 +133,28 @@
                                 </div>
                             </div>
                             <!--end_follow-->
-                            <div>
-                                <div class="p-3 mb-2 bg-light text-dark" style="margin-top: 10px">
-                                    Bạn thích chỗ nghỉ này, nhưng vẫn chưa chắc chắn?
-                                    <div class="col-md col-sm-6 col-xs-12">
-                                        <button type="button"
-                                                class="btn btn-primary btn-lg col-md col-sm-6 col-xs-12 btn-block">
-                                            Xem
-                                            các nhà tương tự
-                                        </button>
-                                    </div>
-                                </div>
 
+                            <div class="p-3 mb-2 bg-light text-dark" style="margin-top: 10px">
+                                Bạn thích chỗ nghỉ này, nhưng vẫn chưa chắc chắn?
+                                <div class="col-md col-sm-6 col-xs-12">
+                                    <button type="button"
+                                            class="btn btn-primary btn-lg col-md col-sm-6 col-xs-12 btn-block">
+                                        Xem
+                                        các nhà tương tự
+                                    </button>
+                                </div>
                             </div>
+
+                            <!--map-->
+                            <div class="p-3 mb-2 bg-light text-dark" style="margin-top: 10px">
+                                <h4 style="color: red">Địa chỉ HomeCodeGym </h4>
+
+
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.9265632499687!2d105.76612145093053!3d21.035624192850133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313454b9444c676b%3A0xe713200541b7456d!2sCodeGym!5e0!3m2!1svi!2s!4v1547885473894"
+                                        frameborder="0" style="border:0"
+                                        allowfullscreen></iframe>
+                            </div>
+                            <!--end_map-->
                         </div>
                     </div>
                     <!--end_row1-->
