--- a/src/app/customer/register/register.component.html
+++ b/src/app/customer/register/register.component.html
@@ -1,3 +1,344 @@
-<p>
-  register works!
-</p>
+<!--nav-bar-->
+<div class="container-fluid">
+    <nav class="navbar navbar-light" style="height: 115px">
+        <figure id="logo" class="navbar-brand" style="margin-left: 150px">
+            <a [routerLink]="['/']">
+                <img src="https://coinvn247.com/wp-content/uploads/2019/01/codegym.png" alt="HomeCodeGym"
+                     class="img-responsive" width="160px" height="100px"></a>
+        </figure>
+        <ul class="nav nav-pills">
+            <li class="nav-item dropdown" style="margin-right: 40px">
+                <a class="nav-link dropdown-toggle btn btn-outline-success" data-toggle="dropdown" href="#"
+                   role="button" aria-haspopup="true" aria-expanded="false">Tài khoản </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Đăng nhập </a>
+                </div>
+            </li>
+        </ul>
+    </nav>
+</div>
+<!--end/nav-bar-->
+
+<!--row-->
+<div class="container-fluid" style=" margin-bottom: 50px;">
+    <div class="row">
+        <div class="col-md-1 col-sm-4 col-xs-12">
+            <div class="column"><!--#--></div>
+        </div>
+
+        <div class="col-md-10 col-sm-4 col-xs-12">
+            <div class="column">
+                <div class="row">
+                    <!--row1-->
+                    <div class="col-md-3 col-sm-6 col-xs-12" style="margin-top: 30px">
+                        <div class="column2">
+
+                            <!--follow-->
+                            <div class="p-3 mb-2 bg-info text-white">
+                                <h4>Đăng ký nhận tin khuyến mãi từ HomeCodeGym </h4>
+                                <p>Đăng ký để nhận ưu đãi qua email, với mức giảm giá đến 70%.</p>
+                                <div class="form-group">
+                                    <input type="email" class="form-control"
+                                           placeholder="name@example.com">
+                                </div>
+                                <div class="buttons col-md col-sm-6 col-xs-12">
+                                    <button type="button" class="btn btn-light" style="margin-left: 100px">Đăng
+                                        ký
+                                    </button>
+                                </div>
+                            </div>
+                            <!--end_follow-->
+                            <div>
+                                <div class="p-3 mb-2 bg-light text-dark" style="margin-top: 10px">
+                                    Bạn thích chỗ nghỉ này, nhưng vẫn chưa chắc chắn?
+                                    <div class="col-md col-sm-6 col-xs-12">
+                                        <button type="button"
+                                                class="btn btn-primary btn-lg col-md col-sm-6 col-xs-12 btn-block">
+                                            Xem
+                                            các nhà tương tự
+                                        </button>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <!--map-->
+                            <div class="p-3 mb-2 bg-light text-dark" style="margin-top: 10px">
+                                <h4 style="color: red">Địa chỉ HomeCodeGym </h4>
+
+
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.9265632499687!2d105.76612145093053!3d21.035624192850133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313454b9444c676b%3A0xe713200541b7456d!2sCodeGym!5e0!3m2!1svi!2s!4v1547885473894"
+                                        frameborder="0" style="border:0"
+                                        allowfullscreen></iframe>
+                            </div>
+                            <!--end_map-->
+                        </div>
+                    </div>
+                    <!--end_row1-->
+
+                    <!--row2-->
+                    <div class="col-md-9 col-sm-6 col-xs-12" style="margin-top: 10px;">
+                        <h4 class="text-uppercase font-weight-bold"
+                            style="margin-top: 30px; margin-bottom: 30px; text-align: center">Đăng ký tài khoản</h4>
+                        <div class="row">
+                            <div class="col-md-2 col-sm-2 col-xs-2"></div>
+                            <div class="col-md-8 col-sm-8 col-xs-8">
+                                <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+                                    <div class="form-group row">
+                                        <label for="name" class="col-form-label col-md-3">Tên:</label>
+                                        <div class="col-md-9">
+                                            <input type="text" class="form-control" id="name"
+                                                   formControlName="name">
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="email" class="col-md-3 col-form-label">Email:</label>
+                                        <div class="col-md-9">
+                                            <input type="text" class="form-control" id="email"
+                                                   formControlName="email">
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="passsword" class="col-md-3 col-form-label">Mật khẩu:</label>
+                                        <div class="col-md-9">
+                                            <input type="password" class="form-control" id="passsword"
+                                                   formControlName="password">
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="phone" class="col-md-3 col-form-label">Số điện thoại:</label>
+                                        <div class="col-md-9">
+                                            <input type="text" class="form-control" id="phone"
+                                                   formControlName="phone">
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="address" class="col-md-3 col-form-label">Địa chỉ:</label>
+                                        <div class="col-md-9">
+                                            <input type="text" class="form-control" id="address"
+                                                   formControlName="address">
+                                        </div>
+                                    </div>
+                                    <button type=submit class="btn btn-success center-block" style="float: right">Đăng ký</button>
+                                </form>
+                            </div>
+                            <div class="col-md-2 col-sm-2 col-xs-2"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-1 col-sm-4 col-xs-12">
+            <div class="column"><!--#--></div>
+        </div>
+    </div>
+</div>
+<!--Q/cao-->
+<div class="container-fluid" style="margin-top: 30px;margin-bottom: 30px">
+    <div class="row">
+        <div class="col-md-1 col-sm-4 col-xs-12">
+            <!--#-->
+        </div>
+        <div class="col-md-10 col-sm-4 col-xs-12">
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="https://cdn.luxstay.com/home/event/event_13_1547009294.jpg"
+                             alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="https://cdn.luxstay.com/home/event/event_1_1547106326.jpg"
+                             alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="https://cdn.luxstay.com/home/event/event_13_1547009294.jpg"
+                             alt="Third slide">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+        <div class="col-md-1 col-sm-4 col-xs-12">
+            <!--#-->
+        </div>
+    </div>
+</div>
+<!--end_Q/cao-->
+
+<!--introduce-->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-1 col-sm-4 col-xs-12">
+            <!--#-->
+        </div>
+        <div class="col-md-10 col-sm-4 col-xs-12">
+            <div class="row">
+                <div class="col-4 col-sm-4 col-xs-12">
+                    <div class="advantages-thumb"><img class=" lazyloaded"
+                                                       data-src="https://cdn.luxstay.com/home/talk/talk_11072018100744.png"
+                                                       src="https://cdn.luxstay.com/home/talk/talk_11072018100744.png">
+                    </div>
+                    <div class="advantages-txt"><h3>Lần đầu tiên tại Việt Nam</h3>
+                        <p>Ứng dụng cho thuê chỗ ở chuyên nghiệp, đặt phòng tin cậy cho HomeCodeGym cao cấp, căn
+                            hộ dịch vụ
+                            và
+                            biệt thự nghỉ dưỡng.</p></div>
+
+                </div>
+                <div class="col-4 col-sm-4 col-xs-12">
+                    <div class="advantages-thumb"><img class=" lazyloaded"
+                                                       data-src="https://cdn.luxstay.com/home/talk/talk_5_1543569870.png"
+                                                       src="https://cdn.luxstay.com/home/talk/talk_5_1543569870.png">
+                    </div>
+                    <div class="advantages-txt"><h3>Sống như người bản địa</h3>
+                        <p>Trải nghiệm không gian bản địa để chuyến du lịch có nhiều màu sắc. Chúng tôi mang đến
+                            những trải
+                            nghiệm hoàn toàn mới nhưng vẫn đảm bảo sự tiện lợi và riêng tư tuyệt đối.</p></div>
+
+                </div>
+                <div class="col-4 col-sm-4 col-xs-12">
+                    <div class="advantages-thumb"><img class=" lazyloaded"
+                                                       data-src="https://cdn.luxstay.com/home/talk/talk_11072018100842.png"
+                                                       src="https://cdn.luxstay.com/home/talk/talk_11072018100842.png">
+                    </div>
+                    <div class="advantages-txt"><h3>Mỗi căn hộ một cá tính riêng</h3>
+                        <p>Từ những căn hộ hiện đại, biệt thự biệt lập cho đến những ngôi nhà truyền thống,
+                            chúng tôi không
+                            ngừng mở rộng danh sách để đem đến sự lựa chọn đa dạng cho khách hàng.</p></div>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-md-1 col-sm-4 col-xs-12">
+            <!--#-->
+        </div>
+    </div>
+</div>
+<!--end_introduce-->
+<!--end_row-->
+
+
+<!-- Footer -->
+<div>
+    <footer class="page-footer font-small unique-color-dark" style="margin-top: 20px">
+
+        <div style="background-color: #6351ce;">
+            <div class="container">
+
+                <div class="row d-flex align-items-center">
+                    <!-- Grid column -->
+                    <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+                        <h5 class="mb-0">Theo dõi chúng tôi !</h5>
+                    </div>
+                    <!-- Grid row-->
+                    <div class="d-flex flex-row-reverse" style="margin-top: 5px">
+                        <!-- Grid column -->
+                        <ul class="footerNavLinks">
+                            <a href="#!"><img
+                                    src="https://tiendientu.org/wp-content/themes/tdt/assets/images/icon-facebook.png"
+                                    alt="Facebook"></a>
+                            <a href="#!"><img
+                                    src="https://tiendientu.org/wp-content/themes/tdt/assets/images/icon-youtube.png"
+                                    alt="Youtube"></a>
+                            <a href="#!"><img
+                                    src="https://tiendientu.org/wp-content/themes/tdt/assets/images/icon-telegram.png"
+                                    alt="Telegram"></a>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- Grid column -->
+        </div>
+        <!-- Footer Links -->
+        <div class="container text-center text-md-left mt-5">
+            <!-- Grid row -->
+            <div class="row mt-3">
+
+                <div class="section col-md-4">
+                    <a class="td-header-logo td-sticky-disable" href="https://coinvn247.com/">
+                        <img class="td-retina-data"
+
+                             src="https://coinvn247.com/wp-content/uploads/2019/01/homecodegum.png"
+                             height="150px"
+                             width="265px" alt="">
+                    </a>
+                </div>
+                <!-- Grid column -->
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <!-- Links -->
+                    <h6 class="text-uppercase font-weight-bold">Hỗ trợ</h6>
+                    <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <p>
+                        <a href="#!">Câu hỏi thường </a>
+                    </p>
+                    <p>
+                        <a href="#!">Chính sách hủy</a>
+                    </p>
+                    <p>
+                        <a href="#!">Hướng dẫn đặt phòng</a>
+                    </p>
+
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+
+                    <!-- Links -->
+                    <h6 class="text-uppercase font-weight-bold">Cẩm nang du lịch </h6>
+                    <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <p>
+                        <a href="#!">Đà Lạt </a>
+                    </p>
+                    <p>
+                        <a href="#!">Đà Nẵng </a>
+                    </p>
+                    <p>
+                        <a href="#!">SaPa </a>
+                    </p>
+
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+
+                    <!-- Links -->
+                    <h6 class="text-uppercase font-weight-bold">Contact</h6>
+                    <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <p>
+                        <i class="fas fa-home mr-3"></i> CodeGym, My Dinh, Ha Noi </p>
+                    <p>
+                        <i class="fas fa-envelope mr-3"></i> codegym@gmail.com</p>
+                    <p>
+                        <i class="fas fa-phone mr-3"></i> + 08 234 567 88</p>
+                    <p>
+                        <i class="fas fa-print mr-3"></i> + 08 234 567 89</p>
+
+                </div>
+
+                <!-- Grid column -->
+
+            </div>
+            <!-- Grid row -->
+
+        </div>
+        <!-- Footer Links -->
+
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2019 Copyright:
+            <a href="#!">Bản quyền thuộc về Team CC </a>
+        </div>
+        <!-- Copyright -->
+
+    </footer>
+</div>
+<!-- Footer -->
+
