--- a/src/app/customer/register/register.component.html
+++ b/src/app/customer/register/register.component.html
@@ -88,13 +88,22 @@
                                         <div class="col-md-9">
                                             <input type="text" class="form-control" id="name"
                                                    formControlName="name">
+                                            <div *ngIf="registerForm.get('name').invalid && registerForm.get('name').touched"
+                                                 style="color: red">
+                                                Hãy nhập tên của bạn!
+                                            </div>
                                         </div>
+
                                     </div>
                                     <div class="form-group row">
                                         <label for="email" class="col-md-3 col-form-label">Email:</label>
                                         <div class="col-md-9">
                                             <input type="text" class="form-control" id="email"
                                                    formControlName="email">
+                                            <div *ngIf="registerForm.get('email').invalid && registerForm.get('email').touched"
+                                                 style="color: red">
+                                                Hãy nhập địa chỉ email của bạn!
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="form-group row">
@@ -102,6 +111,10 @@
                                         <div class="col-md-9">
                                             <input type="password" class="form-control" id="passsword"
                                                    formControlName="password">
+                                            <div *ngIf="registerForm.get('password').invalid && registerForm.get('password').touched"
+                                                 style="color: red">
+                                                Mật khẩu là bắt buộc và có ít nhất 6 ký tự!
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="form-group row">
@@ -109,6 +122,10 @@
                                         <div class="col-md-9">
                                             <input type="text" class="form-control" id="phone"
                                                    formControlName="phone">
+                                            <div *ngIf="registerForm.get('phone').invalid && registerForm.get('phone').touched"
+                                                 style="color: red">
+                                                Hãy nhập vào số điện thoại của bạn!
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="form-group row">
@@ -116,12 +133,17 @@
                                         <div class="col-md-9">
                                             <input type="text" class="form-control" id="address"
                                                    formControlName="address">
+                                            <div *ngIf="registerForm.get('address').invalid && registerForm.get('address').touched"
+                                                 style="color: red">
+                                                Hãy nhập vào địa chỉ của bạn!
+                                            </div>
                                         </div>
                                     </div>
                                     <div *ngIf="message">
-                                        <p style="background-color: aquamarine">{{message}}</p>
+                                        <p style="background-color: aquamarine; text-align: center">{{message}}</p>
                                     </div>
-                                    <button type=submit class="btn btn-success center-block" style="float: right">Đăng ký</button>
+                                    <button [disabled]="registerForm.invalid" type=submit
+                                            class="btn btn-success center-block" style="float: right">Đăng ký</button>
                                 </form>
                             </div>
                             <div class="col-md-2 col-sm-2 col-xs-2"></div>
