--- a/src/app/view-detail/view-detail.component.html
+++ b/src/app/view-detail/view-detail.component.html
@@ -35,33 +35,32 @@
 <!--end/nav-bar-->
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-2 col-sm-4 col-xs-12">
+        <div class="col-md-1 col-sm-4 col-xs-12">
             <!--#-->
         </div>
-        <div class="col-md-8 col-sm-4 col-xs-12">
+        <div class="col-md-10 col-sm-4 col-xs-12">
             <div class="row">
                 <div class="col-md-9 col-sm-6 col-xs-12">
                     <div class="row">
                         <!--img-->
                         <div class="col-md-8 col-sm-6 col-xs-12">
-                            <div class="card">
-                                <p>
-                                    <img class="card-img-top" src="http://127.0.0.1:8000/storage/{{house?.image[0]}}"
-                                         height="400px"
-                                         width="600px">
-                                </p>
-                            </div>
+                            <p>
+                                <img class="body" src="http://127.0.0.1:8000/storage/{{house?.image[0]}}"
+                                     height="520px"
+                                     width="738px">
+                            </p>
+
                         </div>
                         <div class="col-md-4 col-sm-6 col-xs-12">
-                            <div class="card">
-                                <img class="card-img-top"
-                                     src="http://127.0.0.1:8000/storage/{{house?.image[1]}}"
-                                     alt="Card image cap" style="width: 300px">
-                            </div>
-                            <div class="card" style="margin-top: 5px">
+
+                            <img class="card-img-top"
+                                 src="http://127.0.0.1:8000/storage/{{house?.image[1]}}"
+                                 alt="Card image cap" style="width: 380px">
+
+                            <div style="margin-top: 15px">
                                 <img class="card-img-top"
                                      src="http://127.0.0.1:8000/storage/{{house?.image[2]}}"
-                                     alt="Card image cap" style="width: 300px">
+                                     alt="Card image cap" style="width: 380px">
                             </div>
                         </div>
                         <!--end_img-->
@@ -207,7 +206,7 @@
             </div>
 
         </div>
-        <div class="col-md-2 col-sm-4 col-xs-12">
+        <div class="col-md-1 col-sm-4 col-xs-12">
             <!--#-->
         </div>
     </div>
